// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compilePrompt > 开发者路径：system 含注册表 Schema，user 含原始内容与开发者提示词 1`] = `
"你是一个页面内容增强引擎。你只能输出符合给定组件注册表的组件树 JSON，禁止输出 HTML、CSS 或任何代码。
所有文本内容必须是纯文本；组件名必须来自注册表；props 必须满足 Schema 约束。
输出协议：{"version":1,"slot":"<槽位名>","tree":{"component":"<组件名>","props":{...},"children":[...],"slots":{"<槽位名>":[...]}}}
children 对应组件声明的 default 槽位；未声明槽位的组件不允许包含子节点。
组件注册表（JSON）：
{
  "hero-banner": {
    "description": "页面顶部主视觉区",
    "props": {
      "title": {
        "type": "string",
        "maxLength": 60
      }
    },
    "required": [
      "title"
    ],
    "slots": [
      "default"
    ]
  }
}"
`;

exports[`compilePrompt > 开发者路径：system 含注册表 Schema，user 含原始内容与开发者提示词 2`] = `
"槽位：hero

原始内容：
<h1>我们的产品</h1>

开发者要求：面向开发者重写"
`;

exports[`compilePrompt > 用户路径：用户提示词以受限前缀注入，且排在开发者提示词之后 1`] = `
"槽位：hero

原始内容：
<h1>我们的产品</h1>

实时数据：
{"latestPosts":["a","b"]}

开发者要求：面向开发者重写

在保持上述组件约束的前提下，按用户要求调整：再短一点"
`;
